--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@artsy/fresnel": "^1.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "react": "^16.14.0",
+    "react-burger-menu": "^2.9.0",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-particles-js": "^3.3.0",
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
+    "react-smooth": "^1.0.5",
+    "react-typing-effect": "^2.0.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
