--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-particles-js": "^3.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-smooth": "^1.0.5",
