--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "particles.js": "^2.0.0",
     "react": "^16.14.0",
     "react-burger-menu": "^2.9.0",
     "react-device-detect": "^1.14.0",
@@ -18,6 +19,7 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-smooth": "^1.0.5",
+    "react-tsparticles": "^1.18.7",
     "react-typing-effect": "^2.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0"
